[package]
name = "tiktokx-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# frankenstein = { version = "0.30.6", default-features = false, features = ["async-http-client"] }
frankenstein = { git = "https://github.com/swbartosz/frankenstein.git", branch = "fix_chatmember_restricted", features = ["async-http-client"] }
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.6"
log = "0.4.20"
env_logger = "0.10.0"
uuid = {  version = "1.6.1", features = ["v4"] }
reqwest = "0.11.4"